--- a/notebooks/DQNN_replay.ipynb
+++ b/notebooks/DQNN_replay.ipynb
@@ -54,19 +54,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "33033416-f7d4-45c2-88ee-bdfd76af660e",
+   "cell_type": "markdown",
+   "id": "0d9f53e0-1c6a-4260-bff0-0896a35927bb",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def create_q_network(h1_size=150, h2_size=100):\n",
-    "    return torch.nn.Sequential(\n",
-    "        torch.nn.Linear(4, h1_size),\n",
-    "        torch.nn.ReLU(),\n",
-    "        torch.nn.Linear(h1_size, h2_size),\n",
-    "        torch.nn.ReLU(),\n",
-    "        torch.nn.Linear(h2_size, 2))"
+    "## Decision Policies"
    ]
   },
   {
@@ -98,6 +90,14 @@
     "    else:\n",
     "        action = np.argmax(q_values_)\n",
     "    return action, q_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dff5e115-e4a2-4dbc-93c9-ff990cea48d0",
+   "metadata": {},
+   "source": [
+    "## Loss"
    ]
   },
   {
@@ -142,6 +142,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b760851-6a4d-43e6-8ece-915542fe4cfb",
+   "metadata": {},
+   "source": [
+    "## Q-Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "33033416-f7d4-45c2-88ee-bdfd76af660e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_q_network(h1_size=150, h2_size=100):\n",
+    "    return torch.nn.Sequential(\n",
+    "        torch.nn.Linear(4, h1_size),\n",
+    "        torch.nn.ReLU(),\n",
+    "        torch.nn.Linear(h1_size, h2_size),\n",
+    "        torch.nn.ReLU(),\n",
+    "        torch.nn.Linear(h2_size, 2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "8f5005dd-a520-4868-b613-75e4930c60a4",
@@ -152,6 +176,42 @@
     "    optimizer.zero_grad()\n",
     "    loss_value.backward()\n",
     "    optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7fa01e9-656e-4286-9af4-55e8519730fa",
+   "metadata": {},
+   "source": [
+    "## Simulate One Episode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122ce925-5cce-4315-bf66-93cdc3925304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_episode(env, model, policy, duration):\n",
+    "    s, _ = env.reset()\n",
+    "    episode = []\n",
+    "    for t in range(duration):\n",
+    "        a = policy(model, s)\n",
+    "        s_new, r, terminate = take_action(env, a)\n",
+    "        episode.append((s, a, r))\n",
+    "        s = s_new\n",
+    "        if terminate:\n",
+    "            break\n",
+    "    return episode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05dfaae1-b599-4007-83af-06d1ba41c09a",
+   "metadata": {},
+   "source": [
+    "## Training Loop"
    ]
   },
   {
