--- a/notebooks/MultiarmBandit.ipynb
+++ b/notebooks/MultiarmBandit.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "9fc4b1ba-5c5e-4a02-b9a9-af105dcd1468",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "7f06dca8-f4d5-44d3-9f5d-ccc55f1d42a0",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
     "        Returns:\n",
     "            float: The obtained reward.\n",
     "        \"\"\"\n",
-    "        return self.mean + 2*self.span * (random.random()-0.5)       "
+    "        return self.mean + 2*self.span * (random.random()-0.5) # random number in [mean-span, mean+span]       "
    ]
   },
   {
