--- a/notebooks/MultiarmBandit_v3.ipynb
+++ b/notebooks/MultiarmBandit_v3.ipynb
@@ -274,7 +274,7 @@
     "        if a<0 or a>=len(self.bandits):\n",
     "            return -self.penalty\n",
     "        else:\n",
-    "            return self.bandits[a].pull_leaver()\n",
+    "            return self.bandits[a]()\n",
     "        \n",
     "    def __call__(self, a: int) -> float:\n",
     "        return self.take_action(a)"
