--- a/notebooks/SLAA/MultiarmBandit.ipynb
+++ b/notebooks/SLAA/MultiarmBandit.ipynb
@@ -592,9 +592,15 @@
    "id": "da702e7e",
    "metadata": {},
    "source": [
-    "1. Probati sa manjim epsilon, da se vidi da je manja razlika nagiba\n",
-    "2. Probati da uzmete nauceno q, i probati 100 iteracija sa epsilon = 0\n",
-    "3. Kako napraviti da se srednje vrednosti menjaju tokom vremena. Za pocetak samo da se nakon 4000 iteracija promene srednje vrednosti i spanovi bandita."
+    "## Assignments for Individual Work\n",
+    "\n",
+    "1. Experiment with the value of `epsilon`. Try smaller values, and verify that the slope difference is smaller. Verify also the oposite fact: increasing `epsilon` decreases the slope of the plotted achieved gain. Explain.\n",
+    "   \n",
+    "1. Perform a training run to learn the `q` vector (in essence, to estimate the mean value of the reward returned by each bandit). Create a test loop, in which the learned `q` values remain fixed. Compare performance of the agent to the ideal performance (as it is done in the previous point).\n",
+    "\n",
+    "1. Plot the change of the estimated `q` values in time. Show that with passing time the algorithm sucessfully approximates mean rewards of all bandits.\n",
+    "\n",
+    "1. Modify the environment so that the distributioKako napraviti da se srednje vrednosti menjaju tokom vremena. Za pocetak samo da se nakon 4000 iteracija promene srednje vrednosti i spanovi bandita."
    ]
   },
   {
