--- a/notebooks/SLAA/MultiarmBandit.ipynb
+++ b/notebooks/SLAA/MultiarmBandit.ipynb
@@ -10,6 +10,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b151419",
+   "metadata": {},
+   "source": [
+    "**ONE ARMED BANDIT** is a slang for a _slot machine_: It has one arm (one leaver) and it will rob you. Imagine, however, that there is not one but many such bandits. Some are worse than others, and some may even reward you. The problem, however, is that they all look the same, and we do not know how bad each one of the is. Since there are many, each with only one hand, the multitude of slot machines is referred to as **MULTIARM BANDIT**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "334eddae",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>The Goal:</b> \n",
+    "Devise a strategy for investigating the bandits (pulling the leavers and obtaining the reward/payinh the penalty) so that the total gain is maximized (total loss is minimized).\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71734cac-5ef4-41ee-8ef8-db592851bef8",
    "metadata": {},
    "source": [
@@ -600,7 +619,7 @@
     "\n",
     "1. Plot the change of the estimated `q` values in time. Show that with passing time the algorithm sucessfully approximates mean rewards of all bandits.\n",
     "\n",
-    "1. Modify the environment so that the distributioKako napraviti da se srednje vrednosti menjaju tokom vremena. Za pocetak samo da se nakon 4000 iteracija promene srednje vrednosti i spanovi bandita."
+    "1. Modify the environment so that the mean values of all bandits change in time. Repeat the training procedure. Evaluate its effectiveness."
    ]
   },
   {
