--- a/notebooks/Maze_old.ipynb
+++ b/notebooks/Maze_old.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7b6bb4be-37c9-44b4-900a-6eb78e1db712",
+   "metadata": {},
+   "source": [
+    "# Maze Solver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c86c1a6-3d08-48bd-85e1-0f0cf830e3e3",
+   "metadata": {},
+   "source": [
+    "A **maze** is a rectangular array of cells. The **agent** may move across the cells of the mase. By stepping into a cell, the agent receives a reward (or pays a penalty). Some cells are **terminal**, when stepping into a terminal cell the agent finishes the game (exits the maze). The **goal** of the agent is to maximize the total cummulative reward (minimize the total cummulative loss).\n",
+    "\n",
+    "In addition to **regular** and **terminal** cells, there are also **walls**: walls are forbidden areas of the maze. The agent canot step onto a wall cell."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8797245c-4176-41ac-827d-50c450041771",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>The Assignment:</b> \n",
+    "Implement the maze environment and develop optimal decision policy for moving across the maze.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71784cd6-893d-4db2-b53f-46fdd7ddf7c3",
+   "metadata": {},
+   "source": [
+    "## Basic Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "829663e9-06b1-4de3-a4c7-92126678e95f",
@@ -18,6 +55,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a22dd10b-062f-418c-838d-cbf10e07911d",
+   "metadata": {},
+   "source": [
+    "## The Maze"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a6abf61-9d36-4d4a-8fd8-c0595fa6c762",
+   "metadata": {},
+   "source": [
+    "Let us implement the maze first, so that later we can implement solution algorithm(s).\n",
+    "\n",
+    "We will start by implementing individual cells, and the we will collect them all within a single maze board."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0884f03b-6180-467e-a470-dafa7ca07f9e",
+   "metadata": {},
+   "source": [
+    "### Implementing Individual Cells"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9d782d4a-fcba-40bb-bcea-ffd240a78ab4",
@@ -25,19 +88,54 @@
    "outputs": [],
    "source": [
     "class Cell(ABC):\n",
+    "    \"\"\"Abstract base class for all maze cells.\"\"\"\n",
     "\n",
     "    @abstractmethod\n",
     "    def get_reward(self) -> float:\n",
+    "        \"\"\"The reward an agent receives when stepping onto this cell.\"\"\"\n",
     "        pass\n",
     "\n",
     "    def is_steppable(self) -> bool:\n",
+    "        \"\"\"Checks if an agent can step onto this cell.\n",
+    "\n",
+    "        Regular and terminal cells are steppable.\n",
+    "        Walls are not steppable.\n",
+    "        \"\"\"\n",
     "        return True\n",
     "\n",
     "    def is_terminal(self) -> bool:\n",
+    "        \"\"\"Checks if the cell is terminal.\n",
+    "\n",
+    "        When stepping onto a terminal cell the agent exits\n",
+    "        the maze and finishes the game.\n",
+    "        \"\"\"\n",
     "        return False\n",
     "\n",
     "    def has_value(self) -> bool:\n",
+    "        \"\"\"Check if the cell has value.\n",
+    "        \n",
+    "        The value is defined for regular cells and terminal cells,\n",
+    "        but not for walls. \n",
+    "        \"\"\"\n",
     "        return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1156dbd8-ec33-41ff-a923-7d0e29184cfa",
+   "metadata": {},
+   "source": [
+    "We will use the `Cell` class to derive all other cell classes. Please note that it may seem that `is_steppable` and `has_value` are essentially synonims, but this is not true in general.\n",
+    "\n",
+    "Consider for example **teleport cells**. When stepping onto such a cell the agent is instantinuously transported into another, linked cell. Such a cell is different from the cell to which it is linked. It has a distinct geometrical location, and is steppable. However, from routing point of view it is just an alias for the linked cell, and so there is no reason for it to have a distinct value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c2916c6-3c78-489a-bcc2-e56bff41acc7",
+   "metadata": {},
+   "source": [
+    "Let us now implement some basic types of cells:"
    ]
   },
   {
@@ -48,6 +146,7 @@
    "outputs": [],
    "source": [
     "class RegularCell(Cell):\n",
+    "    \"\"\"A common, non-terminal, steppable cell.\"\"\"\n",
     "\n",
     "    def __init__(self, reward: float):\n",
     "        self.reward = reward\n",
@@ -57,6 +156,7 @@
     "\n",
     "\n",
     "class TerminalCell(Cell):\n",
+    "    \"\"\"A terminal cell.\"\"\"\n",
     "\n",
     "    def __init__(self, reward: float):\n",
     "        self.reward = reward\n",
@@ -72,6 +172,7 @@
     "\n",
     "\n",
     "class WallCell(Cell):\n",
+    "    \"\"\"A non-steppable cell.\"\"\"\n",
     "\n",
     "    def get_reward(self) -> float:\n",
     "        return 0\n",
@@ -81,6 +182,22 @@
     "\n",
     "    def has_value(self) -> bool:\n",
     "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a193a73-4b67-43e1-ab84-f7b1064c4f43",
+   "metadata": {},
+   "source": [
+    "### Implementing the Maze Board"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3d9c15-711b-4b49-b0de-ebddc71464ac",
+   "metadata": {},
+   "source": [
+    "The maze board is essentially a rectangular grid of cells. The board is not concerned with the type of individual cells, it is only interested in their relative arrangement."
    ]
   },
   {
