--- a/notebooks/SLAA/MultiarmBandit.ipynb
+++ b/notebooks/SLAA/MultiarmBandit.ipynb
@@ -32,7 +32,7 @@
    "id": "71734cac-5ef4-41ee-8ef8-db592851bef8",
    "metadata": {},
    "source": [
-    "# Basic Imports"
+    "## Basic Imports"
    ]
   },
   {
